--- a/project.css
+++ b/project.css
@@ -1,5 +1,5 @@
 #main2{
-    background: url("images/bg-img.jpg") rgba(34 22 220/82%);
+    background: url("images/bg-img.jpg") rgba(0 127 255/100%);
     height: 450px;
     background-size: cover;
     background-blend-mode: multiply;
@@ -7,8 +7,13 @@
     
 }
 #container-div{
-    background-color:rgb(34, 53, 93) ;
+    background-color: rgb(26, 43, 78) ; ;
 }
 .p1{
     margin-left: 60px;
+}
+
+html,body{
+    max-width: 100%;
+    overflow-x: hidden;
 }
